--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </p>
                 <div class="btn-con">
                     <a href="resume.pdf" class="main-btn">
-                        <span class="btn-text">Download Resume</span>
+                        <span class="btn-text">Resume</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
     
                     </a>
@@ -46,9 +46,7 @@
                                 <a href="https://github.com/parshanpourbakht" target="_blank">
                                     <i class="fab fa-github"></i>
                                 </a>
-                                <a href="mailto:ppa29@sfu.ca" target="_blank">
-                                    <i class="fa fa-envelope"></i>
-                                </a> 
+                        
                                 <a href="https://open.spotify.com/user/parshynextdoor" target="_blank">
                                     <i class="fab fa-spotify"></i>
                                 </a> 
