--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="btn-con">
                     <a href="resume.pdf" class="main-btn">
                         <span class="btn-text">Resume</span>
-                        <span class="btn-icon"><i class="fas fa-download"></i></span>
+                        <span class="btn-icon"><i class="fas fa-book"></i></span>
     
                     </a>
                 </div>
